# pi-discord-rs

./: .gitignore  Cargo.toml  MIGRATION.md  README.md
locales/: en.json  zh-TW.json
pi-discord-rs/prompts/: 00_system.txt
prompts/: 00_system.md
src/: auth.rs  composer.rs  config.rs  flow.rs  i18n.rs  main.rs  migrate.rs  uploads.rs  writer_logic.rs
src/agent/: copilot.rs  kilo.rs  manager.rs  mod.rs  opencode.rs  pi.rs  runtime.rs
src/commands/: abort.rs  agent.rs  clear.rs  compact.rs  config.rs  cron.rs  language.rs  mention_only.rs  mod.rs  model.rs  skill.rs  thinking.rs
src/cron/: manager.rs
src/session/: mod.rs
