[package]
name = "agent-discord-rs"
version = "0.2.0"
edition = "2021"
description = "A high-performance Discord Bot daemon supporting multiple AI agents (pi, opencode)."
license = "MIT"
keywords = ["discord", "bot", "ai", "agent", "daemon"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
async-trait = "0.1"
uuid = { version = "1.13", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
rust-embed = "8.5"
fs2 = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
dirs = "5.0"
libc = "0.2"

[[bin]]
name = "agent-discord"
path = "src/main.rs"
